# zensearch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  prompt.md
.github/: copilot-instructions.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4663645b3f8c_initial_schema.py  a1b2c3d4e5f6_add_user_ai_enabled.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_api.py  test_knowledge_api.py  test_search_and_admin_api.py
backend/tests/integration/: test_resilience_and_services.py  test_schema_reconcile.py  test_services_admin.py
backend/tests/unit/: test_bangs_and_modes.py  test_cache_and_rate_limit.py  test_pipeline.py  test_plugins.py  test_providers.py  test_ranking.py  test_security.py
backend/zen/: __init__.py  cli.py  main.py  middleware.py  version.py
backend/zen/ai/: __init__.py  base.py  service.py
backend/zen/api/: deps.py
backend/zen/api/routes/: admin.py  auth.py  knowledge.py  search.py  user.py
backend/zen/core/: __init__.py  cache.py  config.py  exceptions.py  pagination.py  rate_limit.py  security.py
backend/zen/db/: __init__.py  base.py
backend/zen/db/models/: __init__.py  knowledge.py  search.py  system.py  users.py
backend/zen/observability/: __init__.py  logging.py  metrics.py
backend/zen/plugins/: __init__.py  loader.py  manager.py  manifest.py  repository.py  sdk.py
backend/zen/schemas/: api.py  common.py
backend/zen/search/: __init__.py  bangs.py  engine.py  health.py  http.py  models.py  modes.py  pipeline.py  ranking.py
backend/zen/search/providers/: __init__.py  base.py  bing.py  brave.py  duckduckgo.py  github.py  google.py  kagi.py  mojeek.py  reddit.py  stackoverflow.py  startpage.py  wikipedia.py  youtube.py
backend/zen/services/: __init__.py  audit.py  auth.py  bookmarks.py  bootstrap.py  collections.py  export.py  history.py  notes.py  profiles.py  settings.py  tags.py  users.py  workspaces.py
backend/zen/workers/: __init__.py  scheduler.py  tasks.py
deploy/compose/: .env.example  (+2 more)
docs/: README.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
(+75 files in other folders)
