[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zen-server"
description = "Zen — self-hosted research and knowledge discovery platform. Search less. Find more."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "The Zen Authors" }]
keywords = ["search", "metasearch", "self-hosted", "knowledge", "research", "homelab"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "redis>=5.2",
  "structlog>=24.4",
  "argon2-cffi>=23.1",
  "PyJWT>=2.10",
  "cryptography>=43",
  "typer>=0.15",
  "prometheus-client>=0.21",
  "packaging>=24",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
ldap = ["ldap3>=2.9"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
]

[project.scripts]
zen = "zen.cli:app"

[project.urls]
Homepage = "https://github.com/cmerk2021/zensearch"
Documentation = "https://github.com/cmerk2021/zensearch/tree/main/docs"

[tool.hatch.version]
path = "zen/version.py"

[tool.hatch.build.targets.wheel]
packages = ["zen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM108", "RUF012", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
source = ["zen"]
omit = ["zen/cli.py"]
